# vkQuake

./: .gitignore  .gitmodules  configure.sh  meson.build  meson_options.txt
Quake/: build_cross_win32.sh  build_cross_win64.sh  common.c  common.h  sys_sdl_unix.c  sys_sdl_win.c
